try Xmx 256M