@@ -52,6 +52,7 @@ dependencies {
 
 application {
     mainClass.set("me.him188.ani.danmaku.server.ApplicationKt")
+    applicationDefaultJvmArgs = listOf("-Xmx256m", "-XX:+UseZGC")
 }
 
 idea {
